--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,46 +1,48 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
     margin: 0;
     padding: 0;
+    background-color: #f0f0f0;
+    text-align: center; /* Centrar el texto en el cuerpo */
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #282c34;
     color: white;
+    padding: 20px;
     text-align: center;
-    padding: 15px;
 }
 
-#search-bar {
-    margin: 20px auto;
+h1 {
+    margin: 0;
+}
+
+input[type="text"] {
     padding: 10px;
     width: 80%;
-    max-width: 500px;
-    font-size: 16px;
-    display: block;
+    margin-top: 10px;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 20px auto;
-    max-width: 600px;
+main {
+    padding: 20px;
+    text-align: center; /* Centrar el texto en el main */
 }
 
-li {
-    background: white;
-    margin: 10px 0;
+.song {
+    background-color: white;
+    margin: 10px auto;
     padding: 15px;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    max-width: 600px; /* Limitar el ancho máximo de la canción */
+    text-align: center; /* Centrar el texto en las canciones */
 }
 
-h2 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
+.song-title {
+    margin-top: 0;
 }
 
-p {
-    margin: 5px 0;
+.verse, .chorus {
+    text-align: center;
+    margin: 10px 0;
 }
