--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,48 +1,48 @@
+/* styles.css */
+
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
-    text-align: center; /* Centrar el texto en el cuerpo */
 }
 
 header {
-    background-color: #282c34;
-    color: white;
-    padding: 20px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    border-bottom: 1px solid #ddd;
+    z-index: 1000; /* Asegura que esté por encima del contenido */
+}
+
+.search-container {
+    padding: 10px;
     text-align: center;
 }
 
-h1 {
-    margin: 0;
-}
-
-input[type="text"] {
-    padding: 10px;
+#search {
     width: 80%;
-    margin-top: 10px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 main {
-    padding: 20px;
-    text-align: center; /* Centrar el texto en el main */
+    margin-top: 100px; /* Ajusta esto si tu header es más grande */
 }
 
 .song {
-    background-color: white;
-    margin: 10px auto;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    max-width: 600px; /* Limitar el ancho máximo de la canción */
-    text-align: center; /* Centrar el texto en las canciones */
+    margin: 20px;
+    padding: 20px;
+    border-bottom: 1px solid #ddd;
 }
 
 .song-title {
-    margin-top: 0;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 .verse, .chorus {
-    text-align: center;
     margin: 10px 0;
 }
